--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Faceless Sketches</title>
+    <title>By Hafsa</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -34,9 +34,9 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Faceless Sketch Shop</h1>
+    <h1></h1>
     <img src="https://via.placeholder.com/300" alt="Sketch Sample" />
-    <p>Beautiful prints, no face needed.</p>
+    <p>Art prints and more</p>
     <a href="https://gumroad.com/yourprofile" class="buy-btn" target="_blank" rel="noopener noreferrer">Buy Prints</a>
 </body>
 </html>
