--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Shop – Faceless Sketches</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #fff;
+      padding: 40px;
+      text-align: center;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.2rem;
+      margin-bottom: 30px;
+    }
+
+    .product {
+      display: inline-block;
+      width: 280px;
+      margin: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 15px;
+    }
+
+    .product img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .product h2 {
+      font-size: 1.1rem;
+      margin: 10px 0;
+    }
+
+    .product a {
+      display: inline-block;
+      background: black;
+      color: white;
+      padding: 10px 16px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 10px;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.8rem;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="shop.html">Shop</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="faq.html">FAQ</a>
+  </nav>
+
+  <h1>Shop</h1>
+
+  <div class="product">
+    <img src="https://via.placeholder.com/280x350.png?text=Sketch+1" alt="Sketch 1">
+    <h2>Sketch Print #1</h2>
+    <a href="https://gumroad.com/yourproduct1" target="_blank">Buy Print</a>
+  </div>
+
+  <div class="product">
+    <img src="https://via.placeholder.com/280x350.png?text=Tote+Bag" alt="Tote Bag">
+    <h2>Faceless Tote Bag</h2>
+    <a href="https://gumroad.com/yourproduct2" target="_blank">Buy Tote</a>
+  </div>
+
+  <footer>
+    <p>More art coming soon.</p>
+  </footer>
+
+</body>
+</html>
 
