--- a/about.html
+++ b/about.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About – Faceless Sketches</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #fff;
+      padding: 60px;
+      text-align: center;
+      color: #333;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    p {
+      max-width: 600px;
+      margin: 20px auto;
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+
+    footer {
+      margin-top: 50px;
+      font-size: 0.8rem;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="shop.html">Shop</a>
+    <a href="cart.html">Cart</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="faq.html">FAQ</a>
+  </nav>
+
+  <h1>About Faceless Sketches</h1>
+
+  <p>
+    No names. No face. Just emotion in lines.  
+    Faceless Sketches is a quiet rebellion — hand-drawn art inspired by solitude, softness, and silent strength.  
+    This is for the invisible ones. The unheard. The graceful ghosts.  
+  </p>
+
+  <p>
+    Every print you see begins as a single sketch — drawn in silence and shared with the world.  
+    I don’t speak. My art does.
+  </p>
+
+  <footer>
+    <p>Thank you for being here.</p>
+  </footer>
+
+</body>
+</html>
 
