--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cart – Faceless Sketches</title>
+  <title>Cart –Sketches</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@300;500&display=swap" rel="stylesheet">
   <style>
     body {
